--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
   "devDependencies": {
     "cirru-script": "^0.2.3",
     "cirru-script-loader": "0.1.0",
+    "css-loader": "^0.16.0",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-cirru-script": "^0.1.1",
     "rsyncwrapper": "^0.4.2",
     "run-sequence": "^1.0.2",
     "stir-template": "^0.1.4",
+    "style-loader": "^0.12.3",
     "webpack": "^1.8.5",
     "webpack-dev-server": "^1.8.0"
   },
   "dependencies": {
     "immutable": "^3.7.4",
+    "origami-ui": "0.0.1",
     "react": "^0.13.3",
     "react-redux": "^0.9.0",
     "redux": "^1.0.1",
