add some styles

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-cirru-script": "^0.1.1",
+    "react-hot-loader": "^1.2.9",
     "rsyncwrapper": "^0.4.2",
     "run-sequence": "^1.0.2",
     "stir-template": "^0.1.4",
